Long titles fixed with overflow ellipsis + completing migration to css vars

--- a/frontend/src/global_styles/content/_projects_list.sass
+++ b/frontend/src/global_styles/content/_projects_list.sass
@@ -143,8 +143,11 @@ form.project-filters
   .generic-table--header-outer:hover
     background: initial
 
-  td.name a
-    white-space: nowrap
+  td.name
+    overflow: hidden
+    text-overflow: ellipsis
+    a
+      white-space: nowrap
 
   td.project--hierarchy
     white-space: nowrap
